# ide

./: Cargo.toml  README.md  app_config.toml
app_backend/: Cargo.toml  README.md
app_backend/src/: main.rs
app_backend/src/modules/: config.rs  networking.rs
app_backend/src/modules/games/: mod.rs
app_backend/src/utils/: config.rs  datastorage.rs  mod.rs  networking.rs
app_gui/: Cargo.toml  README.md
