[package]
name = "app_backend"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.3.0"
derive = "1.0.0"
serde = {version= "1.0.152", features = ["derive"]}
tokio = {version = "1.24.2", features = ["full"]}
toml = "0.5.10"
uuid = {version = "1.2.2", features = ["std", "v4"]}
